--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "three": "^0.179.1",
+    "three-spritetext": "^1.10.0",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
